--- a/tests/input.html
+++ b/tests/input.html
@@ -102,6 +102,8 @@
             function keyboardHandler(connecting) {
                 if (connecting) {
                     inputs["keyboard"] = new KeyboardDevice();
+                    if (activeGp.includes("keyboard")) return;
+
                     for (let i = 0; i < activeGp.length; i++) {
                         if (activeGp[i] === null) {
                             activeGp[i] = "keyboard";
@@ -121,7 +123,6 @@
                 window.addEventListener("gamepaddisconnected", function(e) { gamepadHandler(e, false); }, false);
 
                 window.addEventListener("keydown", function(e) { keyboardHandler(true); }, false);
-
                 animate();
             });
         </script>
