Made the config only load when the page was finished loading instead of instantly

--- a/tests/input.html
+++ b/tests/input.html
@@ -77,10 +77,13 @@
                 }
             }
 
-            loadConfig().then(() => {
-                InputHandler.enableHandlers();
-                animate();
+            $(document).ready(() => {
+                loadConfig().then(() => {
+                    InputHandler.enableHandlers();
+                    animate();
+                });
             });
+
         </script>
 
         <style>
